# Ugway

./: .gitignore  ReadMe.md  fix.patch
ROS2_VL53L1X/lidar/src/tof_vl53l1x/: package.xml
install/libphidget22/share/libphidget22/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nav_odo_pkg/share/nav_odo_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/phidget_stepper_controllers/share/phidget_stepper_controllers/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/phidgets_accelerometer/share/phidgets_accelerometer/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/phidgets_analog_inputs/share/phidgets_analog_inputs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/phidgets_analog_outputs/share/phidgets_analog_outputs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/phidgets_api/share/phidgets_api/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/phidgets_digital_inputs/share/phidgets_digital_inputs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/phidgets_digital_outputs/share/phidgets_digital_outputs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/phidgets_drivers/share/phidgets_drivers/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/phidgets_gyroscope/share/phidgets_gyroscope/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/phidgets_ik/share/phidgets_ik/: package.bash  package.dsv  (+3 more)
log/: latest_build
src/Test-C/: HelloWorld.c  HelloWorld.sln  HelloWorld.vcxproj  example
src/gpio_utils/: package.xml  setup.cfg  setup.py
src/gpio_utils/config/: config_pwm.yaml  config_reader.yaml  config_writer.yaml  configreader.yaml
src/gpio_utils/gpio_utils/: gpio_pwm_writer.py  gpio_reader.py  gpio_writer.py
src/gpio_utils/launch/: simple_gpio.py
src/lidar_vl53l1x_processing/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/lidar_vl53l1x_processing/launch/: simple_lidar.py
src/lidar_vl53l1x_processing/lidar_vl53l1x_processing/: data_processing.py
src/lidar_vl53l1x_processing/lidar_vl53l1x_processing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/main_ugway/: package.xml  setup.cfg  setup.py
src/main_ugway/launch/: simple_trajectory.py  simple_vel.py
src/main_ugway/main_ugway/: speed_demo.py  trajectory_demo.py
src/navigation_utils/: README.md  package.xml  setup.cfg  setup.py
src/navigation_utils/config/: default_params.yaml  defaultparams.yaml  example_trajectories.yaml  exampletrajectories.yaml  totalparams.yaml
src/navigation_utils/launch/: cmd_vel.py  step_dist.py  trajectory_dist.py
src/navigation_utils/navigation_utils/: cmd_vel_differential_robot_subscriber.py  distance_differential_robot_controller.py  trajectory_action_server.py  utils.py
src/phidget_stepper_controllers/: README.md  package.xml  setup.cfg  setup.py
src/phidget_stepper_controllers/config/: tests.yaml
src/phidget_stepper_controllers/launch/: nav_odo_launch.py
src/phidget_stepper_controllers/phidget_stepper_controllers/: speed_controller_server.py  step_controller_server.py  test_speed.py  test_step.py
src/phidget_stepper_controllers_msgs/: CMakeLists.txt  package.xml
src/phidget_stepper_controllers_msgs/action/: SpeedController.action  StepController.action  Trajectoire.action  WheelsDistance.action
src/start_robot/: README.md  package.xml  setup.cfg  setup.py
src/start_robot/start_robot/: client_member_function.py  service_member_function.py
src/start_robot_interface/: CMakeLists.txt  package.xml
src/start_robot_interface/srv/: StrategyInt.srv
src/tof_vl53l1x/: setup.cfg  setup.py
(+99 files in other folders)
