<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phidget_stepper_controllers</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="remipbw@gmail.com">remi</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>python3-pytest</test_depend>



  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>phidgets_drivers</depend>
  <depend>phidget_stepper_controllers_msgs</depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
