<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>start_robot</name>
  <version>0.0.0</version>
  <description>Starting server/client for robot</description>
  <maintainer email="ousmanethiongane17@gmail.com">mowibox</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>
  <depend>pyserial</depend>
  <depend>time</depend>
  <depend>RPi.GPIO</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <exec_depend>tutorial_interfaces</exec_depend>
  </export>
</package>
